--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to the Local Page!</h1>
-    <p>This is a sample local HTML page that is being displayed within an iframe. You can include any content you like here.
-        <br>
-        <br>
-     Feel free to add more text, images, or other elements to make this page more informative or interactive.</p>
+    <h1>HTML Project with iframes</h1>
+    <h3>Local Content</h3>
+    <iframe src="./web.html" frameborder="1" width="300" height="200"></iframe>
+    <p>Here is an example of local content embedded using an iframe.</p>
+    <h3>External Website</h3>
+    <iframe src="https://www.wikipedia.org/" frameborder="1" width="600" height="400" ></iframe>
+    <p>This iframe displays an external website, Wikipedia, embedded in the page.</p>
+    <h3>YouTube Video</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/JrEVlnH7znc?si=700FrYuyuAW0RRBJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <p>This iframe displays a YouTube video player embedded in the page.</p>
 </body>
 </html>
